--- a/src/main/webapp/resources/css/member_modify.css
+++ b/src/main/webapp/resources/css/member_modify.css
@@ -1,119 +1,107 @@
 #member_modify_main_wrap {
-	padding: calc(( 100vh - 580px)/2) 0;
-	background-image: url(../img/background_img/login_pattern2.jpg);
-    background-size: cover;
+/* 	padding: calc(( 100vh - 580px)/2) 0;
+ */    
+ background-size: cover;
 }
-
+* { font : 14px verdana }
 #member_modify_main_div {
 	background-color: white;
-	width: 840px;
-	height: 525px;
+	width: 777px;
+	height: 700px;
 	margin: 0 auto;
 }
 
-#member_modify_img_logo {
-	display: flex;
-	margin-bottom: 40px;
+#member_modify_h4_div{
+	margin-bottom:20px;
+	margin-top:20px;
+	border-bottom: 1px solid gray;	
 }
 
-#member_modify_img_logo a {
-	width: 200px;
-	height: 75px;
-	margin-top: 50px;
-	margin-left: 100px;
-}
-
-#member_modify_img_logo img {
-	width: 200px;
-	height: 75px;
-}
-
-#member_modify_sequence_box {
-	display: flex;
-	justify-content: flex-end;
-	align-items: flex-end;
-	width: 440px;
-	height: 129px;
-	margin-right: 100px;
-}
-
-#member_modify_sequence {
-	display: flex;
-	list-style: none;
-}
-
-.member_modify_sequence_list {
-	margin: 20px;
-	padding: 10px;
-	font-size: 25px;
-	border: 2px solid #F5F0F0;
-	border-radius: 5px;
-}
-
-.membership_step {
-	border: 2px solid orange;
-}
-
-#member_modify_sub_div_1 {
+#member_modify_h4{
 	display: inline-block;
-	width: 320px;
-	height: 230px;
-	margin-top: 20px;
-	margin-left: 100px;
+	text-align: left;
+	margin-left: 57px;
 }
 
-#member_modify_sub_div_2 {
+#member_modify_sub_div{
+	height: 450px;
+	width: 600px;	
+	margin-left: 60px;
+}
+
+#member_modify_table{
+	text-align: left;	
 	display: inline-block;
-	width: 320px;
-	height: 230px;
-	vertical-align: top;
-	margin-top: 20px;
+	border-spacing: 0 20px;
 }
-
+#member_modify_table th{
+	padding-bottom: 20px;
+}
+#member_modify_table td{
+	padding-left: 68px;	
+}
 .member_modify_text { /* 인풋박스 설정 */
-	width: 265px;
-	height: 30px;
-	line-height: 30px;
-	font-size: 18px;
-	padding-left: 20px;
+	width: 200px;
+	height: 15px;
 	outline: 0;
 	border-left: none;
 	border-right: none;
 	border-top: none;
+	text-align: left;
+	padding-left:10px;
+	padding-bottom:5px;
+	border-bottom:1px solid orange;
 }
 
-.member_modify_text:hover {
-	border-bottom: 2px solid orange;
+.member_modify_text.birth{
+	width: 40px;
+	height: 15px;
+	outline: 0;
+	border-left: none;
+	border-right: none;
+	border-top: none;
+	text-align: left;
+	padding-left:10px;
+	border-bottom:1px solid orange;
+	padding-bottom:5px;
+	font-size : 14px;
 }
 
-.member_modify_text:focus {
-	border-bottom: 2px solid orange;
+.member_modify_text.tel{
+	width: 42px;
+	height: 15px;
+	outline: 0;
+	border-left: none;
+	border-right: none;
+	border-top: none;
+	text-align: left;
+	padding:0 10px;
+	border-bottom:1px solid orange;
+	padding-bottom:5px;
+	font-size : 14px;
 }
-
-.member_modify_birth {
-	width: 200px;
-	height: 30px;
-}
-
-.member_modify_birth:hover {
-	border-bottom: 2px solid orange;
-}
-
-.member_modify_birth:focus {
-	border-bottom: 2px solid orange;
+	
+.member_modify_text.email{
+	width: 98px;
+	height: 15px;
+	outline: 0;
+	border-left: none;
+	border-right: none;
+	border-top: none;
+	text-align: left;
+	padding:0 10px;
+	border-bottom:1px solid orange;
+	padding-bottom:5px;
+	font-size : 14px;
+	font-family: verdana;
 }
 
 #member_modify_select_gender {
 	-webkit-appearance: none; /* 네이티브 외형 감추기 */
 	-moz-appearance: none;
 	appearance: none;
-	width: 75px;
-	height: 35px;
-	padding-left: 15px;
-	padding-bottom: 5px;
-	font-size: 18px;
-	color: gray;
-	border: 2px solid #F5F0F0;
+    width: 120px;
+	height: 15px;
 	outline: 0;
 	border-left: none;
 	border-right: none;
@@ -121,151 +109,59 @@
 	cursor: pointer;
 }
 
-#member_modify_select_gender:hover {
-	border-bottom: 2px solid orange;
-}
-
-#member_modify_select_gender:focus {
-	border-bottom: 2px solid orange;
-}
-
-.member_modify_birth {
-	width: 75px;
-	height: 30px;
-	font-size: 18px;
-	outline: 0;
-	border-left: none;
-	border-right: none;
-	border-top: none;
-	padding-left: 20px;
-	padding-bottom: 2px;
-}
-
-#member_modify_birth {
-	width: 210px;
-	height: 35px;
-	font-size: 18px;
-	color: gray;
-	outline: 0;
-	border-left: none;
-	border-right: none;
-	border-top: none;
-	padding-left: 20px;
-}
 /* #F5F0F0 셀렉트박스에 넣을 회색 */
 .member_modify_email_class {
 	display: inline;
 }
 
-.member_modify_email_class :hover {
-	border-bottom: 2px solid orange;
-}
-
-.member_modify_email_class :focus {
-	border-bottom: 2px solid orange;
-}
-
-.member_modify_email {
-	border: 2px solid #F5F0F0;
-	border-left: none;
-	border-right: none;
-	border-top: none;
-	height: 30px;
-	width: 90px;
-	font-size: 18px;
-	outline: 0;
-	padding-left: 20px;
-}
-
-#member_modify_email_atMark {
-	font-size: 18px;
-}
-
-#member_modify_email_datalist {
-	-webkit-appearance: none; /* 네이티브 외형 감추기 */
-	-moz-appearance: none;
-	appearance: none;
-	width: 108px;
-	height: 30px;
-	padding-left: 10px;
-	font-size: 18px;
-	outline: 0;
-	border-left: none;
-	border-right: none;
-	border-top: none;
-	border-bottom: 2px solid #F5F0F0;
-}
-
-#member_modify_email_datalist:hover {
-	border-bottom: 2px solid orange;
-}
-
-#member_modify_email_datalist:focus {
-	border-bottom: 2px solid orange;
-}
-
 #member_modify_certified_btn {
-	width: 48px;
-	height: 34px;
-	background-color: white;
-	border: solid 2px orange;
+	width: 25px;
+	height: 25px;
+	background-color: lightblack;
+	border: solid 2px lightblack;
 	outline: 0;
-	margin-left: 10px;
+	border-radius: 100%;
+	cursor: pointer;
+	margin-left:5px;
+	margin-bottom: 5px;
 }
 
-#member_modify_certified_btn:hover {
-	background-color: orange;
-	color: white;
-}
+/* 가져온 css */
 
-#member_modify_tel_color {
-	height: 30px;
-}
 
-.member_modify_tel {
-	height: 23px;
-	width: 75px;
-	font-size: 18px;
-	outline: 0;
-	border-left: none;
-	border-right: none;
-	border-top: none;
-	padding-left: 20px;
-	padding-bottom: 5px;
-}
 
-.member_modify_tel_hover_focus :hover {
-	border-bottom: 2px solid orange;
-}
-
-.member_modify_tel_hover_focus :focus {
-	border-bottom: 2px solid orange;
-}
-
-#member_modify_next_btn {
+#member_modify_emailcheck_btn{
 	border: solid 2px orange;
 	width: 200px;
 	height: 50px;
 	background-color: white;
 	cursor: pointer;
 	outline: 0;
-	margin: 7px 320px;
+	margin: 0px 300px;
 }
 
-#member_modify_next_btn:hover {
-	background-color: orange;
-	color: white;
+#member_modify_next_btn_div{
+	border-top: 1px solid gray;
+	margin-top: 50px;
+	text-align: right;
+}
+
+#member_modify_p{
+	margin-right: 398px;
+}
+
+#member_modify_next_btn {
+	border: solid 1px gray;
+	width: 100px;
+	height: 30px;
+	background-color: white;
+	cursor: pointer;
+	outline: 0;
 }
 
 .member_modify_error {
-	width: 225px;
-	height: 20px;
-	line-height: 20px;
-	padding-left: 20px;
+	width: 200px;
+	height: 15px;
+	padding:5px;
 	color: #ff0000;
-	font-size: 12px;
-	text-align: left;
-	line-height: 20px;
-	margin-top: 5px;
-	margin-bottom: 20px;
 }
